--- a/index.ipynb
+++ b/index.ipynb
@@ -194,6 +194,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
+    "    if len{restaurant['rating'] > alternative['rating']:\n",
     "    pass"
    ]
   },
