--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price']) > alternative['rating']:\n",
+    "    if len(restaurant['price']) > alternative['price']:\n",
     "    pass"
    ]
   },
