Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,8 @@
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        return alternative\n",
-    "    el\n",
+    "    else: \n",
+    "        return \n",
     "    pass"
    ]
   },
