--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        return alternative\n",
     "    else: \n",
-    "        return \n",
+    "        return restaurant\n",
     "    pass"
    ]
   },
