--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    f\n",
+    "    for restaurant in \n",
     "    pass"
    ]
   },
