--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for restaurant in \n",
+    "    for restaurant in resaurants:\n",
+    "        \n",
     "    pass"
    ]
   },
