Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in resaurants:\n",
-    "        if\n",
+    "        if restaurant\n",
     "    pass"
    ]
   },
