--- a/index.ipynb
+++ b/index.ipynb
@@ -290,8 +290,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open\n",
     "    for restaurant in resaurants:\n",
-    "        if restaurant\n",
+    "        if \n",
     "    pass"
    ]
   },
