Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open\n",
+    "    open = []\n",
     "    for restaurant in resaurants:\n",
     "        if \n",
     "    pass"
