Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in resaurants:\n",
-    "        if \n",
+    "        if restaurant\n",
     "    pass"
    ]
   },
