--- a/index.ipynb
+++ b/index.ipynb
@@ -293,6 +293,7 @@
     "    open = []\n",
     "    for restaurant in resaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
+    "            res\n",
     "        \n",
     "    pass"
    ]
