Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "    open = []\n",
     "    for restaurant in resaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            restaurant.append\n",
+    "            open.append\n",
     "        \n",
     "    pass"
    ]
