--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
     "    for restaurant in resaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open.append(restaurant)\n",
-    "        \n",
+    "    return open\n",
     "        \n",
     "    pass"
    ]
